--- a/Semana 3/ejercicio.html
+++ b/Semana 3/ejercicio.html
@@ -8,7 +8,7 @@
 <body>
     
     <h1>Mi primer encabezado</h1>
-    <p>Mi primer párrafo.</p>
+    <p id="1">Mi primer párrafo.</p>
     mi primer <video src="/Semana 3/assets/video/VID_20250524_132055.mp4" controls width="300" height="300"></video><br>
     mi primera imagen <img src="/Semana 3/assets/img/Logo 2.jpg" alt="">
 
